[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "offline" ] }
tokio = { version = "1", features = ["full"] }